--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^3.4.1",
@@ -30,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+		"prettify": "npx prettier --write 'src/**/*.ts' 'src/**/*.tsx'"
   },
   "eslintConfig": {
     "extends": "react-app"
