--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^3.4.1",
     "axios": "^0.24.0",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
@@ -25,6 +22,11 @@
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.2"
   },
+	"devDependencies": {
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^3.4.1"
+	},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
