--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.0",
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
